# web

./: .gitignore  .gitmodules  README.md  lib_bundle.sh  mount.sh  push.sh  submodule.sh
app/perfobyte/code/back/: CMakeLists.txt  package.json
app/perfobyte/code/back/src/: 1.c  env.h  import.h
app/perfobyte/code/cdn/static/: CMakeLists.txt
app/perfobyte/code/cdn/static/src/: env.h  i.c  import.h
app/perfobyte/code/cdn/static/w/text/css/: i.css  r.css  s.css
app/perfobyte/code/cdn/static/w/text/css/0/: i.css
app/perfobyte/code/cdn/static/w/text/css/1/: i.css
app/perfobyte/code/cdn/static/w/text/css/2/: i.css
app/perfobyte/code/cdn/static/w/text/css/c/: c.css  chatbar.css  i.css  mc.css  minp.css  msgbr.css  ntin.css  search.css
app/perfobyte/code/cdn/static/w/text/css/call/: button.css  cl_panel.css  cm.css  dlist.css  i.css  tc.css  volume.css
app/perfobyte/code/cdn/static/w/text/css/camera/: au.css  ce.css  d.css  fi.css  i.css  mo.css  pa.css  sh.css  ts.css
app/perfobyte/code/cdn/static/w/text/css/f/: flex.css  i.css
app/perfobyte/code/cdn/static/w/text/javascript/: SH_EL.js  elems.js  i.js
app/perfobyte/code/cdn/static/w/text/javascript/call/: close.js  i.js  open.js  screen_share.js  stop_screen_share.js
app/perfobyte/code/cdn/static/w/text/javascript/chat/: choose_add.js  copy.js  i.js  join.js  keydown.js  opts_click.js  send.js  textContent.js
app/perfobyte/code/cdn/static/w/text/javascript/click/: chatbar_ul.js  cl_d.js  i.js  module.js  section.js
app/perfobyte/code/cdn/static/w/text/javascript/contextmenu/: chatbar_ul.js  i.js  (+2 more)
(+1522 files in other folders)
